src/objects/MCAR_MEPS__c.object
<CustomObject>
    <fields>
        <fullName>Lifecycle__c</fullName>
        <label>Lifecycle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_MEPS_Enterprise_ID__c</fullName>
        <label>Enterprise ID</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_MEP_ID__c</fullName>
        <externalId>true</externalId>
        <label>MEP ID</label>
        <length>127</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MCAR_Mfg_Part_Number__c</fullName>
        <label>Mfg. Part Number</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_NSN_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NSN Part</label>
        <referenceTo>NSN_Part__c</referenceTo>
        <relationshipName>MCAR_MEPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer Name</label>
        <referenceTo>MCAR_Manufacturer__c</referenceTo>
        <relationshipName>MCAR_MEPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchasing__c</fullName>
        <label>Purchasing</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_ID__c</fullName>
        <label>Supplier ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <label>Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MEPS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MCAR_NSN_Part__c</columns>
        <columns>Manufacturer_Name__c</columns>
        <columns>MCAR_MEPS_Enterprise_ID__c</columns>
        <columns>MCAR_Mfg_Part_Number__c</columns>
        <columns>Lifecycle__c</columns>
        <columns>Purchasing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>NSN Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MEPS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>